# primerlab-genomic

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.txt  README.md  RELEASE_NOTES.md  STRUCTURE.md  debug_p3.py  docs.json  environment.yml  full_test_v014.yaml  mint.json  mkdocs.yml  my_config.yaml  mypy.ini  pyproject.toml  requirements-full.txt  rna.ps  scratch_thermo.py  setup.py  test_input.fasta  test_output.txt  test_pcr.yaml  test_qpcr.yaml
.dev/: README.md  primer3_audit.md  primer3_dev_plan.md
.venv-wsl/: pyvenv.cfg
Docs/: getting-started.md
docs/: architecture.md  changelog.md  getting-started.md  index.md  troubleshooting.md
docs_original/: getting-started.md  index.md  troubleshooting.md
examples/: README.md  batch_sequences.csv  excluded_regions.bed  masked_sequence.fasta  multi_sequences.fasta  pcr_long_range.yaml  pcr_standard.yaml  qpcr_sybr.yaml  qpcr_taqman.yaml  workflow_blast_variant.md
favicon/: site.webmanifest
insilico_output/: insilico_result.json  predicted_amplicons.fasta
primerlab/: __init__.py
primerlab_api_out/: audit.json
scratch/: test_pdf_report.py
scripts/: analyze_coverage.py  debug_probe.py  fix-internal-links.ps1  process-docs.ps1
tests/: conftest.py  test_additional_modules.py  test_amplicon_analysis.py  test_amplicon_cli_api.py  test_api.py  test_api_offtarget.py  test_api_v023.py  test_batch_compare.py  test_batch_summary.py  test_blast_cache.py  test_blast_wrapper.py  test_bulk_coverage.py  test_cache.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_cli_insilico.py  test_cli_integration.py  test_cli_main.py  test_cli_qpcr.py  test_cli_v073.py  test_cli_workflows.py  test_comparison.py  test_compat_api.py  test_compat_cli.py  test_compat_models.py  test_compat_report.py  test_compat_scoring.py  test_compat_template.py  (+72 more)
(+391 files in other folders)
