[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primerlab-genomic"
version = "1.0.0"
description = "A modular, AI-friendly bioinformatics framework for automated primer and probe design."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Engki Nandatama", email = "engkinandatama@outlook.com"}
]
keywords = ["bioinformatics", "genomics", "primer-design", "pcr", "qpcr", "crispr", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "primer3-py>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.5.0",
    "biopython>=1.80"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "freezegun>=1.0.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/engkinandatama/primerlab-genomic"
Repository = "https://github.com/engkinandatama/primerlab-genomic.git"
Issues = "https://github.com/engkinandatama/primerlab-genomic/issues"

[project.scripts]
primerlab = "primerlab.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["primerlab*"]
namespaces = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
